--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -56,6 +56,8 @@
     }
     @if $up == true {
         text-transform: uppercase;
+    } @else {
+        text-transform: none;
     }
     line-height: $golden;
     letter-spacing: $spacing;
@@ -75,11 +77,7 @@
     letter-spacing: $spacing;
 }
 
-$mobile-width: 480px;
-$tablet-width: 768px;
-$desktop-width: 992px;
-$big-width: 1140px;
-
+// Media queries
 @mixin mobile {
   @media (max-width: #{$tablet-width - 1px}) {
     @content;
