--- a/css/styles.css
+++ b/css/styles.css
@@ -971,7 +971,7 @@ article p {
     margin-right: -30px;
 }
 
-.image p {
+/*.image p {*/
     margin: 0px;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
